--- a/templates/registration/register.html.twig
+++ b/templates/registration/register.html.twig
@@ -3,6 +3,16 @@
 {% block title %}Register{% endblock %}
 
 {% block body %}
+
+    <div class="row">
+    {#Affichage d'un message flash#}
+        {% for message in app.flashes('notice')%}
+            <div class="alert alert-success">
+                {{message}}
+            </div>
+        {% endfor %}
+    </div>
+
     <h1>Register</h1>
 
     {{ form_errors(registrationForm) }}
