--- a/templates/user_home_page/userHomePage.html.twig
+++ b/templates/user_home_page/userHomePage.html.twig
@@ -18,7 +18,7 @@
 </div>
 
 <div class="example-wrapper">
-    <h1>Hello ! Bienvenue sur votre  !</h1>
+    <h1>Hello ! Bienvenue sur votre Profil !</h1>
 </div>
 
 <div>
