--- a/templates/home_page/homePage.html.twig
+++ b/templates/home_page/homePage.html.twig
@@ -7,19 +7,17 @@
     .example-wrapper { margin: 1em auto; max-width: 800px; width: 95%; font: 18px/1.5 sans-serif; }
     .example-wrapper code { background: #F5F5F5; padding: 2px 6px; }
 </style>
-    {# <div class="row"> #}
-    {#Affichage d'un message flash#}
-        {# {% for message in app.flashes('notice')%}
+    <div class="row">
+     {#Affichage d'un message flash#}
+        {% for message in app.flashes('notice')%}
             <div class="alert alert-success">
                 {{message}}
             </div>
-        {% endfor %} #}
-    {# </div> #}
+        {% endfor %}
+    </div> 
     <div>
-        <h2>Hello, Bienvenue sur la page d'accueil</h2>
+        <h2 class="accueil text-secondary">Hello, Bienvenue ! </h2>
     </div>
-
-
 
     <div>
         <a href="{{path('app_login')}}">Connexion</a>
@@ -42,5 +40,4 @@
                 <a href="{{path('app_userHomePage')}}">UserHomePage</a>
             </div>
         {% endif %}
-
 {% endblock %}
