--- a/templates/admin_home_page/adminHomePage.html.twig
+++ b/templates/admin_home_page/adminHomePage.html.twig
@@ -17,7 +17,7 @@
 </div>
 
 <div class="example-wrapper">
-    <h1>Hello ! Bienvenue sur notre site !</h1>
+    <h1 class ="title h1 mb-5 text-secondary">Hello ! Bienvenue sur notre site !</h1>
 </div>
 
 <div>
