--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -10,15 +10,24 @@
 
         {% if app.user %}
             <div class="mb-3">
-                You are logged in as {{ app.user.userIdentifier }}, <a href="{{ path('app_logout') }}">Logout</a>
+                Vous êtes connecté en tant que : {{ app.user.userIdentifier }}, <a href="{{ path('app_logout') }}">Se déconnecter</a>
             </div>
+            
         {% endif %}
 
-        <h1 class="h3 mb-3 font-weight-normal">Please sign in</h1>
+    <a href="{{path('app_logout')}}">Revenir à la page d'accueil</a>
+
+    <h3 class="title h1 mb-5 text-secondary">Bienvenue sur la page de connexion</h3>
+
+   
+
+    <div class="form-block">
+        
+        <h1 class="h3 mb-4 font-weight-normal text-secondary">Merci d'entrer vos informations :</h1>
         <label for="username">Email</label>
-        <input type="email" value="{{ last_username }}" name="_username" id="username" class="form-control" autocomplete="email" required autofocus>
-        <label for="password">Password</label>
-        <input type="password" name="_password" id="password" class="form-control" autocomplete="current-password" required>
+        <input type="email" value="{{ last_username }}" name="_username" id="username" class="mb-2 form-control" autocomplete="email" required autofocus>
+        <label for="password">Mot de passe</label>
+        <input type="password" name="_password" id="password" class="mb-4 form-control" autocomplete="current-password" required>
         <input type="hidden" name="_csrf_token" data-controller="csrf-protection" value="{{ csrf_token('authenticate') }}">
 
         {#
@@ -31,8 +40,11 @@
             </div>
         #}
 
-        <button class="btn btn-lg btn-primary" type="submit">
-            Sign in
+        <button class="btn btn-lg btn-secondary" type="submit">
+            Se connecter
         </button>
+
+    </div>
+        
     </form>
 {% endblock %}
