--- a/assets/styles/app.css
+++ b/assets/styles/app.css
@@ -1,3 +1,20 @@
 body {
-    background-color: skyblue;
+    background-color: #9de4bfff ;
+}
+
+.form-block{
+    width: 30%;
+    margin: 0 auto;
+    padding: 20px;
+    background-color: rgb(193, 241, 216) ;
+    align-content: center;
+}
+
+.title{
+    text-align: center;
+}
+
+.card{
+    margin: 0 auto;
+    text-align: center;
 }
