--- a/templates/home_page/homePage.html.twig
+++ b/templates/home_page/homePage.html.twig
@@ -5,9 +5,12 @@
 {% block body %}
 <style>
     .example-wrapper { margin: 1em auto; max-width: 800px; width: 95%; font: 18px/1.5 sans-serif; }
-    .example-wrapper code { background: #F5F5F5; padding: 2px 6px; }
+    .example-wrapper code { background: #9de4bfff; padding: 2px 6px; }
 </style>
-    <div class="row">
+
+<body>
+<div class="row">
+    <div>
      {#Affichage d'un message flash#}
         {% for message in app.flashes('notice')%}
             <div class="alert alert-success">
@@ -16,7 +19,7 @@
         {% endfor %}
     </div> 
     <div>
-        <h2 class="accueil text-secondary">Hello, Bienvenue ! </h2>
+        <h2 class="accueil text-secondary ">Hello, Bienvenue ! </h2>
     </div>
 
     <div>
@@ -40,4 +43,10 @@
                 <a href="{{path('app_userHomePage')}}">UserHomePage</a>
             </div>
         {% endif %}
+
+</div>
+    
+</body>
+
+    
 {% endblock %}
